# draftguard

./: README.md  pyproject.toml
draftguard/: __init__.py  __main__.py  cli.py  differ.py  parser.py  reporters.py  rules.py  scanner.py
tests/: conftest.py  test_cli.py  test_differ.py  test_parser.py  test_rules.py  test_scanner.py
tests/fixtures/dev/: .env  .env.example  config.yaml
tests/fixtures/prod/: .env  config.yaml
tests/fixtures/staging/: .env  config.yaml
