[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kryptorious-draftguard"
version = "1.0.0"
description = "Detect environment configuration drift before it causes production incidents"
readme = "README.md"
license = "MIT"
keywords = ["environment", "config", "devops", "drift", "dotenv", "security", "ci-cd"]
authors = [
    { name = "Kryptorious", email = "tools@kryptorious.dev" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://kryptorious.gumroad.com/l/jbvet"
Repository = "https://github.com/CodeGero/draftguard"
Issues = "https://github.com/CodeGero/draftguard/issues"

[project.scripts]
draftguard = "draftguard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["draftguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]
